<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omron_ros2_agv</name>
  <version>0.1.0</version>
  <description>The omron_driver package</description>

  <maintainer email="stiima@todo.todo">stiima</maintainer>

  <license>BSD-3-Clause</license>
  <author>Stiima</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>omron_ros2_msgs</build_depend>

  <depend>angles</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
